syntax = "proto3";
package sfu;

import "signaling.proto";

option go_package = "github.com/RoseWrightdev/Video-Conferencing/backend/go/gen/proto; proto";

// SfuService defines the gRPC interface for the Rust Selective Forwarding Unit (SFU).
// It handles peer session management, signaling, and media routing in the Data Plane.
service SfuService {
  // 1. Initialize a new peer allocation in Rust
  // Rust creates the PeerConnection and returns an SDP Offer immediately.
  rpc CreateSession (CreateSessionRequest) returns (CreateSessionResponse);

  // 2. Forward a signal from the Client (Answer/ICE) to Rust
  rpc HandleSignal (SignalMessage) returns (SignalResponse);

  // 3. Cleanup when a user leaves
  rpc DeleteSession (DeleteSessionRequest) returns (DeleteSessionResponse);

  // 4. Listen for asynchronous events from SFU (Tracks, Renegotiation)
  rpc ListenEvents (ListenRequest) returns (stream SfuEvent);
}

message CreateSessionRequest {
  string room_id = 1;
  string user_id = 2;
}

message CreateSessionResponse {
  string sdp_offer = 1; // The SFU always initiates the connection
}

message SignalMessage {
  string room_id = 1;
  string user_id = 2;
  oneof payload {
    string sdp_answer = 3;
    string ice_candidate = 4;
    string sdp_offer = 5;
  }
}

message SignalResponse {
  bool success = 1;
}

message DeleteSessionRequest {
  string room_id = 1;
  string user_id = 2;
}

message DeleteSessionResponse {
  bool success = 1;
}

message ListenRequest {
  string room_id = 1;
  string user_id = 2;
}

message SfuEvent {
  oneof payload {
    string track_added_user_id = 1; // DEPRECATED: Use track_event
    string track_added_stream_id = 2; // DEPRECATED: Use track_event
    signaling.TrackAddedEvent track_event = 3;
    string renegotiate_sdp_offer = 4;
    string sdp_answer = 5;
    string ice_candidate = 6;
  }
}
